frame/support/test/tests/pallet_ui/storage_result_query_wrong_generic_kind.stderr
error: Invalid pallet::storage, unexpected generic argument kind, expected 1 ident representing a pallet enum error variant name, found `'static`
  --> tests/pallet_ui/storage_result_query_wrong_generic_kind.rs:18:56
   |
18 |     type Foo<T: Config> = StorageValue<_, u8, ResultQuery<'static>>;
   |                                                           ^^^^^^^
